--- a/class-notes/18-PersonnelApi/package.json
+++ b/class-notes/18-PersonnelApi/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -15,5 +17,8 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "mongoose": "^7.6.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
