--- a/class-notes/19-PersonnelApi_Token_Perms/_projectStarter/package.json
+++ b/class-notes/19-PersonnelApi_Token_Perms/_projectStarter/package.json
@@ -4,9 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js",
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -16,9 +14,6 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
-    "mongoose": "^8.12.1"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.9"
+    "mongoose": "^7.6.0"
   }
 }
