--- a/class-notes/20-PersonnelApi_Logs_Documents/package.json
+++ b/class-notes/20-PersonnelApi_Logs_Documents/package.json
@@ -17,7 +17,8 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "mongoose": "^7.6.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "swagger-autogen": "^2.23.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
